force-app/main/default/objects/Merged_Quote_Line__c/Merged_Quote_Line__c.object-meta.xml
<CustomObject>
    <description>SOX object - Details of Quote Lines which are merged into single line.</description>
    <label>Merged Quote Line</label>
    <nameField>
        <label>Merged Quote Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merged Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>