force-app/main/default/objects/Merged_Quote_Line__c/fields/Merged_Renewal_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Merged_Renewal_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quote line that is getting merged</description>
    <label>Merged Renewal Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Merged Quote Lines</relationshipLabel>
    <relationshipName>Merged_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>