force-app/main/default/objects/Merged_Quote_Line__c/fields/New_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>New_Quote_Line__c</fullName>
    <description>Quote Line to which a line is getting merged to.</description>
    <label>New Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Merged Quote Lines (New Quote Line)</relationshipLabel>
    <relationshipName>Merged_Quote_Lines1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>