force-app/main/default/objects/Merged_Quote_Line__c/fields/Special_Program__c.field-meta.xml
<CustomField>
    <fullName>Special_Program__c</fullName>
    <description>Special Program for the merge</description>
    <label>Special Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>